Changes in version 0.3.4:
  o type = "cor" is now supported in varcov, with rho representing the correlations and SD the diagonal standard deviations matrix.
  o The scale of the Fisher information matrix has been adjusted to portray unit information to be similar to Lavaan
  o The getVCOV function has been added to obtain the estimated asymptotic var-cov matrix of the parameters.
  o The meanstructure can now be ignored using meanstructure = TRUE in the following model families:
    - varcov
  o A correlation matrix can now be used as input (detected or set with corinput = TRUE) for the following families:
    - varcov (type = "ggm" and type = "cor")
  o The WLS estimator will now not investigate means when meanstructure is ignored, and variances when a correlaton matrix is used as input.
    - The WLS weights matrix must be of the appropriate dimensions!
    - The WLS.V matrix will no longer be adjusted for missing means.

Changes in version 0.3.3:
  o prune() now removes diagonal values of temporal effects
  o psychonetrics now requires R 3.6
  o Some C++ fixes for Solaris
  
Changes in version 0.3.2:
	o The parameters function now invisibly returns the parameter estimate data frame
	o The MIs function now invisibly returns a data frame with MI estimates
	o fit now invisibly returns a data frame with fit measure estimates


Changes in version 0.3.1:
	o Several help-files are now updated with executable examples

Version 0.3.0: First version to be submitted to CRAN